--- a/ComparePics/ComparePics.vcxproj.filters
+++ b/ComparePics/ComparePics.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="compute.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utils_filesystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="compute.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils_filesystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
